tests/paczka1/fuzzy1/74732811.err
Error in line 1: NG3 S458 8,0
Error in line 2: NG3 A725 97,0
Error in line 19: S458 A725 85,0
Error in line 16: OT8VH S605 66,2
Error in line 22: S458 S605 31,7
Error in line 26: yyAD S809 18,9
Error in line 25: S458 S809 55,3
Error in line 34: NG3 S809 85,7
